Shell3.txt
Windows PowerShell
(C) Корпорация Майкрософт, 2014. Все права защищены.

(.venv) PS C:\Users\Sony\PycharmProjects\news_portal> cd project
(.venv) PS C:\Users\Sony\PycharmProjects\news_portal\project> Python manage.py shell
Python 3.11.7 (tags/v3.11.7:fa7a6f2, Dec  4 2023, 19:24:49) [MSC v.1937 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from news_portal.models import*
>>> post_best = Post.objects.order_by('-rating')first()
  File "<console>", line 1
    post_best = Post.objects.order_by('-rating')first()
                                                ^^^^^
SyntaxError: invalid syntax
>>>  post_best = Post.objects.order_by('-rating').first()
  File "<console>", line 1
    post_best = Post.objects.order_by('-rating').first()
IndentationError: unexpected indent
>>> post_best.Author.user.username
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'post_best' is not defined
>>> post_best.author.user.username
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'post_best' is not defined
>>> for i in a:
...     i.rating
...     i.user.username
...
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'a' is not defined
>>> u1 = User.objects.get(username='Валерий')
>>> u2 = User.objects.get(username='Артём')
>>> Author.objects.get(user=u1)
<Author: Author object (1)>
>>> Author.objects.get(user=u2)
<Author: Author object (2)>
>>> for i in a:
...     i.rating
...     i.user.username
...
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'a' is not defined
>>> for i in a:
...     i.rating
...     i.User.username
...
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'a' is not defined
>>>  post_best = Post.objects.order_by('-rating').first()
  File "<console>", line 1
    post_best = Post.objects.order_by('-rating').first()
IndentationError: unexpected indent
>>>  post_best.author.user.username
  File "<console>", line 1
    post_best.author.user.username
IndentationError: unexpected indent
>>> post_best.author.user.username
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'post_best' is not defined
>>> post_best = Post.objects.order_by('-rating').first()
>>> post_best.author.user.username
'Артём'
>>> post_best.author.rating
25
>>> post_best.author.time_in
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Author' object has no attribute 'time_in'
>>> post_best.author.article_title
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Author' object has no attribute 'article_title'
>>> post_best.post.time_in
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Post' object has no attribute 'post'
>>> post_best.Post.time_in
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Post' object has no attribute 'Post'
>>> post_best.time_in
datetime.datetime(2024, 10, 1, 17, 52, 43, 286535, tzinfo=datetime.timezone.utc)
>>> post_best.aticle_title
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Post' object has no attribute 'aticle_title'
>>> post_best.article_title
'sometitle'
>>> post_best.preview()
'somebigtext...'
>>> comments_post_best = post_best.comment_set.all()
>>> comments_post_best
<QuerySet [<Comment: Comment object (1)>]>
>>> comments_post_best = post_best.comment_set.values('date_creation', 'user__username', 'comment_rating', 'comment_text')
Traceback (most recent call last):
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 2195, in add_fields
    join_info = self.setup_joins(
                ^^^^^^^^^^^^^^^^^
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 1863, in setup_joins
    path, final_field, targets, rest = self.names_to_path(
                                       ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 1768, in names_to_path
    raise FieldError(
django.core.exceptions.FieldError: Cannot resolve keyword 'date_creation' into field. Choices are: comment_text, id, post, post_id, rating, time_in, user,
 user_id

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\manager.py", line 87, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\query.py", line 1360, in values
    clone = self._values(*fields, **expressions)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\query.py", line 1355, in _values
    clone.query.set_values(fields)
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 2500, in set_values
    self.add_fields(field_names, True)
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 2223, in add_fields
    raise FieldError(
django.core.exceptions.FieldError: Cannot resolve keyword 'date_creation' into field. Choices are: comment_text, id, post, post_id, rating, time_in, user,
 user_id
>>> comments_post_best = post_best.comment_set.values('date__creation', 'user__username', 'comment__rating', 'comment__text')
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\manager.py", line 87, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\query.py", line 1360, in values
    clone = self._values(*fields, **expressions)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\query.py", line 1355, in _values
    clone.query.set_values(fields)
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 2500, in set_values
    self.add_fields(field_names, True)
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 2195, in add_fields
    join_info = self.setup_joins(
                ^^^^^^^^^^^^^^^^^
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 1863, in setup_joins
    path, final_field, targets, rest = self.names_to_path(
                                       ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sony\PycharmProjects\news_portal\.venv\Lib\site-packages\django\db\models\sql\query.py", line 1768, in names_to_path
    raise FieldError(
django.core.exceptions.FieldError: Cannot resolve keyword 'date' into field. Choices are: comment_text, id, post, post_id, rating, time_in, user, user_id
>>> comments_post_best = post_best.comment_set.values('time_in', 'user__username', 'rating', 'comment_text')
>>> comments_post_best
<QuerySet [{'time_in': datetime.datetime(2024, 10, 1, 18, 38, 35, 105594, tzinfo=datetime.timezone.utc), 'user__username': 'Валерий', 'rating': 3, 'commen
t_text': 'anytextbyauthor'}]>
>>>
